paginator fix, add z-index to header

--- a/MyPolyglotWeb/wwwroot/css/site.css
+++ b/MyPolyglotWeb/wwwroot/css/site.css
@@ -18,6 +18,7 @@ header {
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 1;
 }
 
 body {
